--- a/fj21-agenda/WebContent/WEB-INF/web.xml
+++ b/fj21-agenda/WebContent/WEB-INF/web.xml
@@ -9,4 +9,29 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <error-page>
+  <exception-type>java.lang.Exception</exception-type>
+<location>/erro.html</location>  
+  </error-page>
+  
+  <error-page>
+    <error-code>404</error-code>
+    <location>/404.html</location>
+  </error-page>
+
+ <!-- 
+    <servlet>
+    <servlet-name>servletOiMundo</servlet-name>
+    <servlet-class>
+        br.com.caelum.servlet.OiMundo
+    </servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>servletOiMundo</servlet-name>
+        <url-pattern>/oi</url-pattern>
+    </servlet-mapping>
+  -->
+    
 </web-app>
